syntax = "proto3";

package golem.project;

enum ProjectType {
  DEFAULT = 0;
  NON_DEFAULT = 1;
}
