syntax = "proto3";

package golem.projectgrant;

import "golem/common/uuid.proto";

message ProjectGrantId {
  golem.common.UUID value = 1;
}
