syntax = "proto3";

package golem.token;

import "golem/common/account_id.proto";
import "golem/token/token_id.proto";

message Token {
  golem.token.TokenId id = 1;
  golem.common.AccountId account_id = 2;
  string created_at = 3;
  string expires_at = 4;
}
